--- a/site/index.html
+++ b/site/index.html
@@ -5,6 +5,6 @@
 	<title>MERHABA</title>
 </head>
 <body>
-<h1>MERHABA COURSERA</h1>
+<h1>MERHABA COURSERA MOHTESEM BIR ATLAYIS</h1>
 </body>
 </html>
